--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,9 @@ skip_missing_interpreters=True
 deps=
     -r requirements.txt
     -r requirements-dev.txt
+    -r requirements-test.txt
 commands=
     flake8 pymem
     mypy pymem
     isort -c -rc pymem
+    pytest
