--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - pip install -r requirements.txt
   - pip install -r requirements-dev.txt
   - pip install -r requirements-test.txt
+  - pip install coveralls
 script:
   - flake8 pymem
   - mypy pymem
@@ -19,3 +20,5 @@ matrix:
 notifications:
   on_success: change
   on_failure: always
+after_success:
+    - coveralls
